add model section

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -231,5 +231,26 @@
   "Looks like you've found the doorway to the great nothing": "Looks like you've found the doorway to the great nothing",
   "The content you're looking for doesn't exist. Either it was removed, or you mistyped the link.": "The content you're looking for doesn't exist. Either it was removed, or you mistyped the link.",
   "Sorry about that! Please visit our homepage to get where you need to go.": "Sorry about that! Please visit our homepage to get where you need to go.",
-  "Go back to Homepage": "Go back to Homepage"
+  "Go back to Homepage": "Go back to Homepage",
+  "Get Medicine Recommendation": "Get Medicine Recommendation",
+  "Type is required": "Type is required",
+  "Type": "Type",
+  "Crop": "Crop",
+  "Animal": "Animal",
+  "Region": "Region",
+  "Region is required": "Region is required",
+  "Crop is required": "Crop is required",
+  "Season is required": "Season is required",
+  "Season": "Season",
+  "Animal is required": "Animal is required",
+  "Age Group is required": "Age Group is required",
+  "Age Group": "Age Group",
+  "Symptom": "Symptom",
+  "Symptom is required": "Symptom is required",
+  "Disease (if known)": "Disease (if known)",
+  "Get Recommendation": "Get Recommendation",
+  "Recommendation Result": "Recommendation Result",
+  "Medicine": "Medicine",
+  "Get Smart Medicine Recommendations for Crops & Animals": "Get Smart Medicine Recommendations for Crops & Animals",
+  "Try the Model": "Try the Model"
 }
